--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL=postgres://<username>:<password>@<host>:<port>/<database>?sslmode=disable
+DATABASE_URL=postgres://<username>:<password>@<host>:<port>/test-ara?sslmode=disable
